--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         <div class="about-content">
             <div class="about-text">
                 <p>
-                    Hi! I'm Pinar, a Front-End Developer focused on creating elegant
-                    and intuitive web experiences. I specialize in translating designs
-                    into pixel-perfect, responsive interfaces.
+                Hi! I’m Pinar, a Front-End Developer focused on creating elegant, intuitive, and responsive web experiences. I specialize in translating designs into pixel-perfect interfaces using HTML, CSS, and JavaScript.
+
+I enjoy learning new technologies, working on small to medium-sized projects, and building websites that users truly enjoy.
                 </p>
                 <p style="margin-top:1rem;">
                     I enjoy learning new technologies, tackling challenging projects,
