new project added

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <!-- PROJECT 2 -->
         <div class="project-card reveal">
             <div class="project-image">
-                <img src="images/podcast1.jpg" alt="Podcast Hub Website" loading="lazy">
+                <img src="images/podcast1.png" alt="Podcast Hub Website" loading="lazy">
             </div>
             <div class="project-info">
                 <h3>Podcast Hub Website</h3>
@@ -174,7 +174,7 @@
                 </div>
 
                 <div class="project-links">
-                    <a href="https://podcast-site-mu.vercel.app/" target="_blank">Live Demo</a>
+                    <a href="https://my-podcastsite.vercel.app/" target="_blank">Live Demo</a>
                     <a href="https://github.com/pyildiz23/PodcastSite.git" target="_blank">
                         
                         <i class="fab fa-github"></i> Source Code
